@@ -3,6 +3,7 @@ tasksel (2.07) UNRELEASED; urgency=low
   * Joey Hess
     - Add --list-tasks switch.
     - Document --new-install and long format switches.
+    - Add --task-packages switch, may be used by Synaptic.
   * Translations
     - Kęstutis Biliūnas
       - Updated Lithuanian translation of tasks.
